# binary-distribution

./: .dockerignore  .gitignore  CNAME  Dockerfile  LICENSE.md  README.md  config-production.toml  config-test.toml  docker-compose.yml  dune  dune-diagnostic-version-number.patch  dune-locking.patch  dune-nix.patch  dune-project  dune-workspace  generate-css.sh  index.html  index.md  install  main.css  metadata-nightly.json  metadata-stable.json  metadata.json  rclone.conf  sandworm.opam  shell.nix  tailwind.config.js
.github/workflows/: binary-nightly.yaml  binary-stable.yaml  binary.yaml  format.yml  shellcheck.yml
completions/: bash.sh
css/: dune  style.css
dune.lock/: ISO8601.0.2.6.pkg  asn1-combinators.0.3.2.pkg  base64.pkg  bigarray-overlap.0.2.1.pkg  bigarray-overlap.pkg  bstr.0.0.4.pkg  bstr.pkg  caqti-lwt.2.2.4.pkg  caqti-lwt.2.3.2.pkg  caqti-lwt.pkg  caqti.2.2.4.pkg  caqti.2.3.2.pkg  caqti.pkg  checkseum.0.5.2.pkg  checkseum.0.5.3.pkg  checkseum.pkg  cmdliner.pkg  conf-gmp-powm-sec.4.pkg  conf-gmp-powm-sec.pkg  conf-gmp.5.pkg  conf-gmp.pkg  conf-libev.4-12.pkg  conf-libev.4-13.pkg  conf-libev.pkg  conf-libssl.4.pkg  conf-libssl.pkg  conf-mingw-w64-gmp-i686.1.pkg  conf-mingw-w64-gmp-x86_64.1.pkg  conf-mingw-w64-openssl-i686.1.pkg  conf-mingw-w64-openssl-x86_64.1.pkg  conf-mingw-w64-sqlite3-i686.1.pkg  conf-mingw-w64-sqlite3-x86_64.1.pkg  conf-pkg-config.4.pkg  conf-pkg-config.pkg  conf-sqlite3.1.pkg  conf-sqlite3.pkg  decompress.1.5.3.pkg  decompress.pkg  digestif.1.3.0.pkg  digestif.pkg  (+193 more)
env/: env.bash  env.fish  env.zsh
lib/: component.mlx  container.mlx  core.ml  dune  error.mlx  icons.mlx  main.mlx  metadata.ml  metadata.mli  web.ml  web.mlx
sandworm/: .gitignore  dune  dune-project  sandworm.opam  tailwind.config.js
sandworm/css/: style.css
sandworm/dev-tools.locks/ocamlformat/: lock.dune
sandworm/dune.lock/: lock.dune  ppx_deriving_yojson.pkg
sandworm/lib/: dune  metadata.ml  rclone.ml  web.ml  web.mlx  web1.mlll
static/: install  main.css
test/: dune-project  dune-workspace  dune_test.opam
tool-wrappers/: ocamllsp
